[package]
name = "hyper-clear"
# Do not change this in the main branch!
# On the release branches, this string will be automatically updated by CI


version = "0.1.0"


edition = "2024"
authors = ["FAZuH <mail@fazuh.com>"]
description = "CLI tool to control window transparency and blur on Hyprland"
license = "MIT"
repository = "https://github.com/fazuh/hyper-clear"
keywords = ["hyprland", "window", "opacity", "blur", "wayland"]
categories = ["command-line-utilities", "wayland"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
fazuh-common = { version = "0.1.0", features = ["log", "log-cli", "types"] }
serde_json = "1.0.150"
tracing = "0.1.44"

[lints.clippy]
uninlined_format_args = "warn"
new_without_default = "allow"
